# dear-imgui-conan-example

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  file_manager.cpp  file_manager.h  imgui_impl_opengl3.cpp  main.cpp  opengl_shader.cpp  opengl_shader.h
assets/: simple-shader.fs  simple-shader.vs
